DDL support for UnnestedRecordType